WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304633
[TestWebKitAPI] Fix back-deployed Sequoia build: nw_webtransport_metadata_set_local_draining unavailable
https://bugs.webkit.org/show_bug.cgi?id=304633
Summary
[TestWebKitAPI] Fix back-deployed Sequoia build: nw_webtransport_metadata_set...
Elliott Williams
Reported
2025-12-22 23:23:25 PST
This symbol is being loaded through a SOFT_LINK_MAY_FAIL macro, but the compiler doesn't understand that and the unavailability declaration is inherited from the SDK.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-22 23:23:32 PST
<
rdar://problem/167069514
>
Elliott Williams
Comment 2
2025-12-22 23:26:48 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55822
EWS
Comment 3
2025-12-23 15:56:14 PST
Committed
304914@main
(29f9eab928c1): <
https://commits.webkit.org/304914@main
> Reviewed commits have been landed. Closing PR #55822 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug