[TestWebKitAPI] Fix back-deployed Sequoia build: nw_webtransport_metadata_set_local_draining unavailable https://bugs.webkit.org/show_bug.cgi?id=304633 rdar://167069514

Unreviewed build fix.

This symbol is being loaded through a SOFT_LINK_MAY_FAIL macro, but the
compiler doesn't understand that and the unavailability declaration is
inherited from the SDK. Fix by redefining
nw_webtransport_metadata_set_local_draining to refer directly to its
softLink* entry point.

* Tools/TestWebKitAPI/NetworkConnection.mm:

Canonical link: https://commits.webkit.org/304914@main